# Proyecto_Integrador_M3

./: .env.example  README.md  pyproject.toml  test_queries.json
data/finance_docs/: finance_knowledge.txt
data/hr_docs/: hr_knowledge.txt
data/tech_docs/: tech_knowledge.txt
src/: multi_agent_system.py  run_test_queries.py  utils.py  vector_store.py
src/agents/: finance_agent.py  hr_agent.py  orchestrator.py  tech_agent.py
