[project]
name = "support-multiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.14.0",
]
